MDL-16605 Add an ajaxy search box on the define/override roles screen to help find the capability you want

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1009,6 +1009,14 @@ body#admin-modules table.generaltable td.c0
   margin-left:auto;
   margin-right:auto;
 }
+.capabilitysearchui {
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+}
+table.rolecap .hiddenrow {
+  display: none;
+}
 
 .rolecap .inherit,
 .rolecap .allow,
