qtype description: MDL-16863 Put back edit icon next to descriptions for teachers.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2555,7 +2555,8 @@ body.notes .notesgroup {
   width: 85%;
 }
 .que.description .info {
-  display: none;
+  margin: 0.5em 0 0.5em 0.2em;
+  width: 1em;
 }
 .que.description .content,
 .que.description .generalfeedback {
