roles admin: Improve the usability of the assign roles interface - this is the first half of the work. Part of MDL-16993.
To do this, I found a way to clean up the method signatures of a couple of accesslib methods, so I did, hence the fact that this seems to touch some unrelated files.

Also, there is a nice new method in accesslib get_context_url, which gives you the natural URL for a context, so the course view page, or the user profile, etc.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1040,6 +1040,14 @@ body#admin-modules table.generaltable td.c0
   margin-right:auto;
 }
 
+#admin-roles-manage .backlink,
+#admin-roles-assign .backlink,
+#admin-roles-override .backlink {
+  text-align: right;
+  width: 90%;
+  margin: 2em auto 1em;
+}
+
 #admin-roles-manage table.rolecap,
 #admin-roles-override table.rolecap {
   margin-left:auto;
