weblib: MDL-17085 a function to print a collapsible region of the UI, with the collapsed state stored in a user_perference.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -215,6 +215,14 @@ div.groupselector {
   text-align:center
 }
 
+.collapsibleregion {
+    overflow: hidden;
+}
+div.collapsibleregion div.collapsibleregioncaption a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .noticebox {
   border-width:1px;
   border-style:solid;
