weblib: MDL-17085 a function to print a collapsible region of the UI, with the collapsed state stored in a user_perference - minor layout improvements for IE.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -219,6 +219,9 @@ div.groupselector {
     overflow: hidden;
     padding: 1px;
 }
+.collapsibleregioncaption {
+    white-space: nowrap;
+}
 .collapsibleregioncaption img {
     vertical-align: middle;
 }
