MDL-17188 "effective question weight equation cannot cope with negative covariance of question grades" excluding such questions from equation

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1088,6 +1088,9 @@ table.quizreviewsummary td.cell {
   border :medium solid yellow;
   background-color:lightYellow;
 }
+#mod-quiz-report .negcovar{
+  border :medium solid pink;
+}
 /***
  *** Modules: Resource
  ***/
