roles explanation: MDL-13538 Make a table showing the result of has_capability for every capabiltiy in a context.
This implements the page showing the table. It is not yet integrated into the tab bar. To try this, go to an Assign roles page (one with URL .../admin/roles/assign.php?contextid=...) and change the 'assign' to 'explain'.

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1169,7 +1169,21 @@ table.quizreviewsummary td.cell {
   background-color:#FFFFFF;
   border: 1px solid #cecece;
 }
-
+table.explainpermissions .decisive.has,
+#explaincaps .rolecap.yes {
+  background-color: #ddffdd;
+}
+table.explainpermissions .decisive.hasnot,
+#explaincaps .rolecap.no {
+  background-color: #ffdddd;
+}
+table.explainpermissions .prohibit {
+    background-color: #ffbbff;
+    font-weight: bold;
+}
+table.explainpermissions .decisive {
+    font-weight: bold;
+}
 #admin-roles-manage .capdefault {
   background-color:#dddddd;
   border: 1px solid #cecece;
