--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1180,21 +1180,16 @@ table.explainpermissions td.cell {
   border-right: 1px solid black;
 }
 table.explainpermissions .newcontext .cell,
-table.explainpermissions th.header.rolename {
+table.explainpermissions .row2 th.header {
     border-top: 1px solid black;
 }
 table.explainpermissions .cell.inherit,
 table.explainpermissions .cell.noroles {
   color: grey;
 }
-table.explainpermissions th.assignmentcontext,
-table.explainpermissions th.rolename {
+table.explainpermissions th.assignment {
   text-align: left;
   padding-left: 0.5em;
-}
-table.explainpermissions th.overridecontextheader {
-  text-align: right;
-  padding-right: 0.5em;
 }
 table.explainpermissions .cell.prohibit {
   font-weight: bold;
