formslib/theme: Make class="advancedbutton" styles generic, so the same styling can be used on non-formslib forms.

--- a/theme/standard/rtl.css
+++ b/theme/standard/rtl.css
@@ -126,7 +126,7 @@ form.mform .fitemtitle {
     margin: 5px 10pt 0pt 0px;
 }
 
-form.mform fieldset .advancedbutton {
+.advancedbutton {
     text-align: left;
 }
 
