role override ui: MDL-8313 basic mode + toggle + usability improvements
* Basic mode just hides the prohobit column. Sadly that is all we can do.
* Button to toggle in and out of advanced mode, with user_perference.
* The permission you are selected is now on the page as a label, rather than just being in a tool-tip. (Not pretty, but helpful, I think. I may change my mind on this.)
* You can click anywhere in the table cell, rather than having to hit the radio button exactly.
* Brief instructions at the top of the page.
* Submit buttons both top and bottom of the page.

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -250,7 +250,8 @@ body#admin-index .copyright {
 }
 
 #admin-roles-manage .rolecap .cap-desc .cap-name,
-#admin-roles-override .rolecap .cap-desc .cap-name {
+#admin-roles-override .rolecap .cap-desc .cap-name,
+.rolecap .note {
   font-size: 0.75em;
 }
 
