--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1198,7 +1198,8 @@ table.explainpermissions .overridden {
 }
 
 #admin-roles-manage .rolecap .cap-desc .cap-name,
-#admin-roles-override .rolecap .cap-desc .cap-name {
+#admin-roles-override .rolecap .cap-desc .cap-name,
+.rolecap .note {
   color: #888;
 }
 
