role manage ui: MDL-8313 First version of the basic/advanced role define page.
This is being separated from manage.php. This code is only partly working. It displays (most) of a role definition, but does not yet let you save changes. However, I wanted to commit it before going home on Friday night. Since this is new code, it won't break anything.

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1185,7 +1185,7 @@ table.explainpermissions .decisive {
 table.explainpermissions .overridden {
   text-decoration: line-through;
 }
-#admin-roles-manage .capdefault {
+#admin-roles-define .capdefault {
   background-color:#dddddd;
   border: 1px solid #cecece;
 }
