--- a/theme/standardwhite/gradients.css
+++ b/theme/standardwhite/gradients.css
@@ -13,7 +13,9 @@ div.header {
     background-position:top;    
     background-repeat:repeat-x;     
 }
-
+table.rotateheaders th.header {
+    background-image: none;
+}
 .navbar {
     background-image:url(gradient.jpg);     
     background-position:top;    
