--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -90,14 +90,6 @@ h6.main {
   text-align: center;
 }
 
-#redirect #message {
-  
-}
-
-#redirect #continue {
-  
-}
-
 /* .clearfix {display: inline-table;} */
 
 /* Hides from IE-mac \*/
@@ -4245,20 +4237,6 @@ table.quizreviewsummary td.cell {
   margin-bottom: 0.5em;
 }
 
-#mod-quiz-edit #page .controls,
-#mod-quiz-edit #page .quizattemptcounts
-{
-  text-align: center;
-}
-#mod-quiz-edit .quizquestions h2 {
-  margin-top: 0;
-}
-#mod-quiz-edit #showhidepagingcontrols {
-  margin-top: 0.7em;
-}
-#mod-quiz-edit #showhidepagingcontrols .singlebutton {
-  display: inline;
-}
 .quizquestionlistcontrols {
   text-align: center;
 }
@@ -4420,6 +4398,545 @@ table.quizreviewsummary td.cell {
 #quiznavigation .othernav input {
   display: block;
   margin: 0.5em 0;
+}
+#mod-quiz-edit div.sideblock{
+    float:right;
+    width:30%;
+    right:0.3em;
+    padding-bottom:0.5em;
+    display:block;
+}
+
+#mod-quiz-edit div.quizcontents{
+    float:left;
+    width:70%;
+    display:block;
+}
+
+#mod-quiz-edit div.quizcontents,h2.main{
+    clear:left;
+}
+
+#mod-quiz-edit .addpage{
+    clear:both;
+    padding-top:0.3em;
+    float:right;
+    margin-right:2em;
+}
+
+#mod-quiz-edit h2.main{
+    display:inline;
+    padding-right:1em;
+}
+
+#mod-quiz-edit .statusdisplay{
+    clear:both;
+    display:block;
+    border:0.2em #FFF solid;
+    margin-bottom:0.3em;
+    margin-right:1em;
+    margin-top:0.3em;
+    padding:0.1em;
+}
+#mod-quiz-edit div.quizpage{
+    display:block;
+    clear:both;
+    width:100%;
+}
+
+#mod-quiz-edit div.quizpage span.pagetitle{
+    margin-top:0.3em;
+    float:left;
+    display:block;
+}
+
+#mod-quiz-edit div.reorder .reordercontrols .moveselectedonpage{
+    clear:right;
+    float:right;
+    padding:0.5em 0.3em;
+}
+
+#mod-quiz-edit div.reorder .reordercontrols .addnewpagesafterselected,#mod-quiz-edit .repaginatecommand{
+    float:right;
+    clear:right;
+    padding-right:1em;
+}
+
+#mod-quiz-edit div.reorder .reordercontrols .deleteselected{
+    float:right;
+    margin-right:1em;
+}
+
+#mod-quiz-edit div.reorder .reordercontrols{
+    clear:both;
+    padding-right:1em;
+    margin-top:0.5em;
+    padding-top:0.5em;
+    padding-bottom:0.5em;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent{
+    margin-top:0.3em;
+    display:block;
+    float:left;
+    position:relative;
+    margin-left:0.3em;
+    border-left:solid #777 thin;
+    line-height:1.3em;
+    -webkit-border-radius:0.6em;
+    -webkit-border-radius-bottomleft:0;
+    -webkit-border-radius-topleft:0;
+    border-radius:0.6em;
+    border-radius-bottomleft:0;
+    border-radius-topleft:0;
+    width:88%;
+    padding:0 0 0.5em;
+}
+
+#mod-quiz-edit div.question{
+    clear:left;
+    width:100%;
+}
+
+#mod-quiz-edit div.question div.qnum{
+    display:block;
+    float:left;
+    width:1.4em;
+    padding-right:0.3em;
+    padding-left:0;
+    z-index:99;
+}
+
+#mod-quiz-edit div.reorder div.question div.qnum{
+    width:2.9em;
+    padding-top:0.1em;
+}
+/*edit tab*/
+#mod-quiz-edit div.editq div.question div.qnum{
+    padding-top:0.2em;
+}
+
+#mod-quiz-edit div.editq div.question{
+    padding-top:0.3em;
+}
+
+#mod-quiz-edit div.reorder div.question{
+    padding-top:0.2em;
+}
+
+#mod-quiz-edit div.question div.questioncontainer{
+    background-color:#ffc;
+}
+
+#mod-quiz-edit div.editq div.question div.content{
+    width:87%;
+    float:left;
+    position:relative;
+    -webkit-border-radius:0.6em;
+    -webkit-border-radius-bottomleft:0;
+    -webkit-border-radius-topleft:0;
+    border-radius:0.6em;
+    border-radius-bottomleft:0;
+    border-radius-topleft:0;
+    line-height:1.4em;
+    padding:0.5em;
+}
+
+#mod-quiz-edit .reorder div.question div.content{
+    width:87%;
+    float:left;
+    background-color:#fff;
+    position:relative;
+    -webkit-border-radius:0.3em;
+    -webkit-border-radius-bottomleft:0;
+    -webkit-border-radius-topleft:0;
+    border-radius:0.3em;
+    border-radius-bottomleft:0;
+    border-radius-topleft:0;
+    line-height:1.2em;
+    padding:0.1em;
+}
+
+#mod-quiz-edit div.question div.content div.points{
+    top:0.5em;
+    border-left:#FFF solid 0.4em;
+    width:7.5em;
+    padding:0.2em;
+}
+
+#mod-quiz-edit .questionbankwindow select#catmenu_jump{
+    /* In Opera9, IE6 the width of the 
+    select obeys the width of its content 
+    by default. This prevents that. */
+    width:100%;
+}
+
+#mod-quiz-edit .questionbankwindow div.header{
+    padding-top:0.2em;
+}
+
+#randomquestiondialog_c select{
+    width:100%;
+}
+
+
+#mod-quiz-edit div.question div.content div.points, 
+        #mod-quiz-edit div.question div.content div.qorder{
+    line-height:1em;
+    float:right;
+    max-width:30%;
+    position:absolute;
+    right:50px;
+    -webkit-border-radius:0.2em;
+    -webkit-border-radius-bottomleft:0;
+    -webkit-border-radius-topleft:0;
+    border-radius:0.2em;
+    border-radius-bottomleft:0;
+    border-radius-topleft:0;
+    z-index:999;
+    display:block;
+    margin:0;
+}
+
+
+#mod-quiz-edit div.question div.content .editicon{
+    width:15px;
+}
+
+#mod-quiz-edit .editq div.questioncontentcontainer  div.singlequestion img{
+    float:left;
+    padding-top:0.3em;
+    padding-right:0.3em;
+}
+
+
+#mod-quiz-edit div.question div.content .questionname,
+#categoryquestions .questionname{
+    white-space:nowrap;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    zoom:1;    
+    position:relative;
+    max-width:20%;
+    /*ie-only:*/
+    text-overflow:ellipsis;
+    /*opera-only*/
+    -o-text-overflow:ellipsis;
+}
+#mod-quiz-edit div.question div.content .singlequestion .questionname,
+#mod-quiz-edit div.question div.content .singlequestion .questiontext{
+    display:inline-block;
+}
+
+#mod-quiz-edit div.editq div.question div.content .singlequestion a .questionname,
+#mod-quiz-edit div.editq div.question div.content .singlequestion a .questiontext{
+    float:left;
+}
+
+#mod-quiz-edit .quizquestionlistcontrols{
+    display:inline;
+}
+
+#mod-quiz-edit div.question div.content .questiontext,
+#categoryquestions .questiontext{
+    -o-text-overflow:ellipsis;
+    text-overflow:ellipsis;
+    position:relative;
+    zoom:1;    
+    padding-left:0.3em;
+    max-width:50%;
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent .pagestatus{
+    -webkit-border-radius-bottomright:0.3em;
+    -webkit-border-radius-topright:0.3em;
+    border-radius-bottomright:0.3em;
+    border-radius-topright:0.3em;
+    margin:0.3em;
+    padding:0.1em 0.1em 0.1em 0.3em;
+}
+
+#mod-quiz-edit div.question div.content .questiontype{
+    display:block;
+    clear:left;
+    float:left;
+}
+
+#mod-quiz-edit div.question div.content .questionpreview{
+    display:block;
+    float:left;
+    margin-left:0.3em;
+    padding-left:0.2em;
+    padding-right:0.2em;
+    background-color:#eee;
+}
+
+#mod-quiz-edit div.question div.content div.quiz_randomquestion .questionpreview{
+    display:inline;
+    float:none;
+}
+
+#mod-quiz-edit div.question div.content div.questioncontrols{
+    float:right;
+    width:45px;
+    position:absolute;
+    right:0.3em;
+    top:0;
+    z-index:999;
+    display:block;
+    padding:0.2em;
+}
+
+#mod-quiz-edit div.question div.content div.questioncontrols img.upwithoutdown{
+    padding-right:12px;
+    display:inline;
+}
+
+#mod-quiz-edit .quizpagedelete{
+    position:absolute;
+    top:0.2em;
+    right:0.2em;
+    display:inline;
+    z-index:999;
+}
+
+#mod-quiz-edit .quizpagedelete img{
+    background-color:#d6d6d6;
+    padding:0.5em;
+}
+
+#mod-quiz-edit .pagecontrols{
+    clear:both;
+    margin-left:0.5em;
+    padding-top:0.5em;
+}
+
+#mod-quiz-edit .pagecontrols .singlebutton{
+    float:left;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent form#addquestion{
+    margin-right:1em;
+    -webkit-border-radius:0.2em;
+    border-radius:0.2em;
+    padding:0.3em;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent form.randomquestionform{
+    padding-left:1em;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent form.randomquestionform div{
+    /* it is a mystery why this has to be inline-table but
+       otherwise the layout gets screwed, even if
+       it is "inline" */
+    display:inline-table;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent form.randomquestionform div input{
+    display:inline;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent .adddescription{
+    clear:left;
+    margin-top:0.3em;
+}
+
+#mod-quiz-edit div.quizpage .pagecontent .addrandomquestion{
+    margin-top:0.3em;
+}
+
+/* a CSS class YUI container creates on the fly: */
+#mod-quiz-edit div#randomquestiondialog_c{
+    width:90%;
+}
+
+#mod-quiz-edit #repaginatedialog .hd{
+    display:none;
+}
+
+#mod-quiz-edit div#randomquestiondialog{
+    display:none;
+}
+
+#mod-quiz-edit div#randomquestiondialog_c .mform,
+#mod-quiz-edit div#repaginatedialog .mform{
+    margin-left:auto;
+    margin-right:auto;
+}
+
+#mod-quiz-edit div.container div.generalbox{
+    position:relative;
+    display:block;
+    border:0 none;
+    margin:0;
+    padding:0;
+}
+
+#mod-quiz-edit .questioncontentcontainer div.randomquestionqlist{
+    padding-left:0.2em;
+    padding-right:0.2em;
+    clear:both;
+    margin:0.5em;
+}
+
+
+#mod-quiz-edit .questioncontentcontainer div.randomquestionqlist ul{
+    list-style-type:none;
+    margin:0;
+    padding:0;
+}
+
+
+#mod-quiz-edit .reorder .questioncontentcontainer .randomquestioncategory,
+#mod-quiz-edit .reorder .questioncontentcontainer .randomquestionfromcategory,
+#mod-quiz-edit .reorder div.question div.content .questionpreview{
+    display:inline;
+    float:none;
+}
+
+#mod-quiz-edit .reorder .questioncontentcontainer{
+    position:relative;
+    overflow:hidden;
+    white-space:nowrap;
+}
+
+#mod-quiz-edit .reorder .questioncontentcontainer .randomquestioncategory{
+    overflow:hidden;
+    white-space:nowrap;
+}
+
+#mod-quiz-edit .reorder fieldset{
+    display:inline;
+}
+
+#mod-quiz-edit .questioncontentcontainer div.randomquestionqlist ul li{
+    clear:left;
+    width:100%;
+    overflow:hidden;
+    white-space:nowrap;
+}
+
+#mod-quiz-edit .questioncontentcontainer div.randomquestionqlist ul li span{
+    display:inline;
+}
+
+/*start question bank*/
+
+/*TODO: below applies to also question bank, so when
+question bank is adapted to the new UI, add the appropriate
+css id's of question bank*/
+#mod-quiz-edit .questionbankwindow .createnewquestion select,
+#mod-quiz-edit .questionbankwindow  #catmenu select{
+    width:80%;
+}
+#mod-quiz-edit table#categoryquestions{
+    width:100%;
+    overflow:hidden;
+    table-layout:fixed;
+}
+
+#mod-quiz-edit table#categoryquestions td,#mod-quiz-edit table#categoryquestions th{
+    overflow:hidden;
+    white-space:nowrap;
+}
+
+#mod-quiz-edit table#categoryquestions col#qaction{
+    width:20%;
+}
+
+#mod-quiz-edit table#categoryquestions col#qextraactions{
+    width:40px;
+}
+
+#mod-quiz-edit table#categoryquestions .iconsmall{
+    padding-left:5px;
+}
+#mod-quiz-edit .categoryinfo{
+    padding:0.3em;
+}
+
+
+
+#mod-quiz-edit .paging{
+    margin-top:0;
+    margin-bottom:0;
+    display:block;
+}
+
+#mod-quiz-edit .questionsortoptions{
+    margin-top:0.3em;
+}
+
+#mod-quiz-edit .pagingbottom{
+    padding-bottom:0.3em;
+}
+
+#mod-quiz-edit div.questionbank form .invisiblefieldset{
+    clear:both;
+}
+
+#mod-quiz-edit div.createnewquestion{
+    padding-top:0.3em;
+    clear:left;
+}
+
+#mod-quiz-edit .sideblock .content{
+    padding:0;
+}
+
+#mod-quiz-edit .questionbank .categorysortopotionscontainer{
+    padding-top:0.5em;
+    margin-top:0.3em;
+}
+
+#mod-quiz-edit .questionbank .categoryselectallcontainer{
+    padding-bottom:0.5em;
+}
+
+#mod-quiz-edit .questionbank div.categoryquestionscontainer,
+#mod-quiz-edit .questionbank .categorysortopotionscontainer,
+#mod-quiz-edit .questionbank .categorypagingbarcontainer,
+#mod-quiz-edit .questionbank .categoryselectallcontainer{
+    padding-left:0.3em;
+    padding-right:0.3em;
+}
+
+#mod-quiz-edit .noquestionsincategory{
+    clear:both;
+    padding-top:1em;
+    padding-bottom:1em;
+}
+
+#mod-quiz-edit .modulespecificbuttonscontainer{
+    padding-left:0.3em;
+    padding-right:0.3em;
+}
+
+#mod-quiz-edit div#footer{
+    clear:both;
+    padding-top:1em;
+}
+
+#mod-quiz-edit #repaginatecommand{
+    display:none;
+}
+
+/*.usejs class is added via javascript so these will toggle if js is enabled*/
+#mod-quiz-edit .usejs #repaginatedialog{
+    display:none;    
+}
+#mod-quiz-edit .usejs #repaginatedialog .hd{
+    display:block;
+}
+#mod-quiz-edit .usejs #repaginatedialog .bd{
+    padding:1em;    
+}
+#mod-quiz-edit .usejs .repaginatecommand #repaginatecommand{
+    display:block;
 }
 
 /***
