formslib: MDL-13210 - partial - try to make validation errores less annoying.
I have made them float right, and reduced the padding on the red box, so they don't cuause the height of the form to change so much, if the error fits to the right of the form control. I realise that some people may not like this, which I why I have done this in head only for now. I will revert this if told to.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -669,10 +669,11 @@ fieldset.fdate_selector label {
 }
 .mform span.error, .mform span.required {
   color: red;
+  float: right;
+  margin-right: 0.3em;
 }
 .mform div.error,.mform fieldset.error {
   border: 1px solid red;
-  padding: 5px;
   color: inherit;
 }
 .mform .fcheckbox input {
