define roles: MDL-16966 etc. polishing the new roles UI following a meeting with Martin.
* Move the show/hide advanced button a bit down the page.
* Improve save button caption when creating a role.
* Don't show defaults on the basic define roles screen.
* Explain the background shading on the advanced roels screen.
* Fix the problem with the risks link to Moodle docs.
* Help icon by the permissions column heading.
* Tables with rotated <th>s, make them vertical-align: bottom.
* Rename explain.php and explainhascapability.php to check.php and explain.php
* Tool tips on the number headers in the explain table.
* Explain table - role names were missing.
* Allow link_to_popup_window to work with full URLs.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -299,6 +299,12 @@ div.collapsibleregion div.collapsibleregioncaption a {
   border-style: solid;
   border-collapse: collapse;
 }
+.generaltable th.header {
+  vertical-align: top;
+}
+table.rotateheaders th.header {
+  vertical-align: bottom;
+}
 
 #participationreport .reporttable {
   text-align: center;
@@ -1163,7 +1169,8 @@ table.rolecap label {
   padding-top: 0.75em;
 }
 
-#admin-roles-override .overridenotice {
+#admin-roles-override .overridenotice,
+#admin-roles-define .definenotice {
     margin: 1em 10% 2em;
     text-align: left;
 }
