--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1128,7 +1128,12 @@ body#admin-modules table.generaltable td.c0
   margin: 1em 0 0;
   text-align: center;
 }
-
+#admin-roles-usersroles .contextname {
+  margin: 0.5em 0 0;
+}
+#admin-roles-usersroles p {
+  margin: 0;
+}
 table.rolecap {
   margin-left: auto;
   margin-right: auto;
