quiz editing: MDL-17396 Quiz tab icons broken in IE
Well, that was a stunningly creating IE layout bug, and I have no idea why this work-around works. (The margin 0 and vertical-align are the essentail bits, the other two rules just make it look nicer.)

Also tweaked the layout in Firefox to position the icons a bit more nicely.

--- a/theme/standard/styles_ie6.css
+++ b/theme/standard/styles_ie6.css
@@ -78,10 +78,12 @@ form.mform textarea {
     /*ie6 shows this as an arrow if this is not specified*/
     cursor: pointer;
 }
-#mod-quiz-edit div.tabtree a span img.iconsmall{
-    display:none;
+.mod-quiz div.tabtree a span img.iconsmall {
+  margin: 0;
+  vertical-align: baseline;
+  position: relative;
+  top: 1px;
 }
-
 #mod-quiz-edit div.question div.content .questiontext,#categoryquestions .questiontext{
     width:50%;
 }
