--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1130,7 +1130,9 @@ bank window's title is prominent enough*/
 }
 #mod-quiz-edit .questioncontentcontainer div.randomquestionqlist{
     background-color:#eee;
-    color:#777;
+}
+#mod-quiz-edit .questioncontentcontainer div.randomquestionqlist ul{
+    color:#555;
 }
 #mod-quiz-edit .questioncontentcontainer div.randomquestionqlist .totalquestionsinrandomqcategory{
     color:#000;
